<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/about_us_blood_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blood Donation"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/about_us_blood_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us_blood_title"
            android:layout_marginTop="20dp"
            android:text="@string/about_blood"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/about_us_organ_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us_blood_txt"
            android:layout_marginTop="20dp"
            android:text="Organ Donation"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/about_us_organ_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us_organ_title"
            android:layout_marginTop="20dp"
            android:text="@string/about_organ"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_marginBottom="20dp"
            android:id="@+id/about_us_organ_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_us_organ_txt"
            android:layout_marginTop="20dp"
            android:text="@string/about_organ1"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

    </RelativeLayout>
</ScrollView>