<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signup_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Blood Donate"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txt_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_border"
            android:hint="@string/name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/signup_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/pass"
            android:padding="10dp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/signup_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_pass"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/cpass"
            android:padding="10dp" />

        <TextView
            android:id="@+id/signup_blood_grp_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_confirm_pass"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="Blood Group"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/signup_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/signup_blood_grp_txt"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/signup_blood_grp_txt"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/signup_blood_grp_txt" />

        <EditText
            android:id="@+id/signup_contact_nomber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_blood_grp_txt"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/cno"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp" />

        <TextView
            android:id="@+id/signup_gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_contact_nomber"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="Gender"
            android:textColor="@android:color/black"
            android:textSize="20dp" />


        <RadioGroup
            android:id="@+id/signup_rg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/signup_gender_txt"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/signup_gender_txt"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/signup_male_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/signup_female_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Female" />

        </RadioGroup>

        <EditText
            android:id="@+id/signup_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_rg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/date"
            android:padding="10dp" />

        <TextView
            android:id="@+id/signup_hint_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_date_of_birth"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="Hint"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_hint_txt"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/hint"
            android:padding="10dp" />


        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_hint"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn"
            android:text="signup"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="italic|bold" />


    </RelativeLayout>
</ScrollView>